--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "version": "0.0.4",
     "license": "MIT",
     "private": false,
+    "homepage": "https://tsuyoii.github.io/x6_scada_HMI/",
     "dependencies": {
         "@antv/x6": "^1.34.2",
         "@antv/x6-react-components": "^2.0.4",
@@ -35,13 +36,9 @@
     "sideEffects": [
         "*.css"
     ],
-    "main": "./dist/index.js",
-    "files": [
-        "dist"
-    ],
     "scripts": {
         "start": "react-scripts start",
-        "build": "rm -rf dist && webpack --config webpack.prod.config.js",
+        "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "predeploy": "npm run build",
