--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
     "name": "lot_scada",
     "author": "koreol",
-    "version": "0.0.6",
+    "version": "0.0.7",
     "license": "MIT",
     "private": false,
     "homepage": "https://tsuyoii.github.io/x6_scada_HMI/",
     "dependencies": {
+        "@ant-design/charts": "^1.4.2",
         "@antv/x6": "^1.34.2",
         "@antv/x6-react-components": "^2.0.4",
+        "@antv/x6-react-shape": "^1.6.1",
         "@types/highlight.js": "^9.12.4",
         "antd": "^4.24.1",
         "brace": "^0.11.1",
@@ -15,9 +17,9 @@
         "highlight.js": "^10.1.2",
         "less": "^4.1.2",
         "lodash": "^4.17.21",
-        "react": "16.14.0",
+        "react": "^16.14.0",
         "react-ace": "^10.0.0",
-        "react-dom": "16.14.0",
+        "react-dom": "^16.14.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "^5.0.1",
         "style-loader": "^3.3.1",
@@ -31,10 +33,15 @@
     },
     "peerDependencies": {
         "react": "^16.14.0",
-        "react-dom": "^16.14.0"
+        "react-dom": "^16.14.0",
+        "@antv/x6-react-shape": "^1.6.1"
     },
     "sideEffects": [
         "*.css"
+    ],
+    "main": "./dist/index.js",
+    "files": [
+        "dist"
     ],
     "scripts": {
         "start": "react-scripts start",
@@ -42,8 +49,7 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
-        "prepublish": "yarn build"
+        "deploy": "gh-pages -d build"
     },
     "browserslist": {
         "production": [
